Small spacing fixes

--- a/resources/assets/sass/partak/_header.scss
+++ b/resources/assets/sass/partak/_header.scss
@@ -97,4 +97,10 @@
       }
     }
   }
+
+  .headbox {
+    > span {
+      display: none;
+    }
+  }
 }
